Adding Map interface

--- a/src/main/app/src/app/app.less
+++ b/src/main/app/src/app/app.less
@@ -1,8 +1,22 @@
-
+@headerHeight: 4rem;
 body {
     font-family: "Open Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
     font-size: 13px;
     color: #3e4855;
     background-color: #fff;
     line-height: 1.42857143;
+  .app-header{
+    height: @headerHeight;
+  }
+    #content{
+      width: 100%;
+      height: 100%;
+      position: absolute;
+      .main-content{
+        height: calc(~"100% - "@headerHeight);
+        display: flex;
+        flex-direction: row;
+        flex-grow: 1;
+      }
+    }
 }
