--- a/src/main/app/src/components/view/header/header.less
+++ b/src/main/app/src/components/view/header/header.less
@@ -2,7 +2,7 @@
   //background: linear-gradient(154deg, #008fe2 0, #00b29c 100%);
   //background: radial-gradient(circle at 1.98% 20.98%, #4b6cb7, transparent 100%),radial-gradient(circle at 98.02% 20.98%, #182848, transparent 100%),radial-gradient(circle at 50% 50%, #0cc285, #0cc285 100%);
   background: radial-gradient(circle at 1.98% 89.01%, #7474BF, transparent 100%), radial-gradient(circle at 98.02% 21.98%, #348AC7, transparent 100%), radial-gradient(circle at 50% 50%, #0cc285, #0cc285 100%);
-  height: 4rem;
+  //height: 4rem;
   color: #ffffff;
   background-color: transparent !important;
   transition: max-width 0.7s ease;
@@ -22,6 +22,14 @@
     }
     .app-user-name{
       text-transform: capitalize;
+    }
+    .app-info{
+      text-align: right;
+      .settings{
+        font-size: 1.4rem;
+        cursor: pointer;
+        margin-left: 0.5rem;
+      }
     }
   }
 }
