--- a/src/main/app/src/components/view/header/header.less
+++ b/src/main/app/src/components/view/header/header.less
@@ -1,9 +1,18 @@
+  @headerColor: #536c79;
 :local(.header) {
+  color: @headerColor;
   .app-title {
-    width: 60%;
+    width: 85%;
     text-align: center;
   }
-  .fa * {
-    color: #536c79;
+  .app-user-name {
+    margin-right: 0.2rem;
+    margin-bottom: 0;
+  }
+  .navbar-brand {
+    width: 50px !important;
+  }
+  .settings,.menu-bars {
+    color: @headerColor;
   }
 }
