--- a/src/main/app/src/app/app.less
+++ b/src/main/app/src/app/app.less
@@ -14,6 +14,9 @@ body {
       display: flex;
       flex-direction: row;
       flex-grow: 1;
+      .sidebar{
+        height: calc(~"100% - " @headerHeight);
+      }
     }
   }
 
